[ADM-3794] Fix spacing

--- a/src/app/help/help.component.scss
+++ b/src/app/help/help.component.scss
@@ -66,7 +66,7 @@ h3 {
   }
   .question {
     font-size: $font-size-S;
-    margin-bottom: $spacing;
+    margin-bottom: $spacing-1S;
     &:last-of-type {
       margin: 0;
     }
@@ -79,6 +79,7 @@ h3 {
   }
   h3 {
     margin-bottom: $spacing-M;
+    padding-top: $spacing;
     &.active {
       color: $corporate;
     }
